refactor: SonarQube 이슈 대응 및 검색 기능명 변경
백엔드:
- 검색 기능명 SearchContent → Search 로 변경
- 검색 컨트롤러 중복 로직 헬퍼로 공통화(SonarQube 대응)
- 로그인 관련 DTO에 Serializable 추가(SonarQube 대응)
- 응답 DTO에 @Builder 어노테이션 추가
- JWT 시크릿 키 값을 환경변수에서 가져오도록 변경

프론트 엔드:
- 검색 기능명 SearchContent → Search 로 변경